# Vinyl-Vote

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  check_notifications.py  config.py  db_create.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  generate_vapid_keys.py  migrate_comments.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  testPush.py  test_admin_notifications.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-proxmox.yml
Nolofication Docs/: NOLOFICATION_CATEGORIES.md  NOLOFICATION_INTEGRATION.md
app/: __init__.py  auth.py  email.py  forms.py  models.py  moderation.py  nolofication.py  oauth.py  scheduler.py  utils.py  vote_card.py
app/routes/: admin.py  api.py  battle.py  comments.py  user.py
app/static/: manifest.json
app/templates/: add_album.html  add_album_results.html  admin.html  admin_albums.html  admin_battles.html  admin_comments.html  admin_email.html  (+34 more)
docs/: NEW_REPO_BOOTSTRAP.md  PROXMOX_DEPLOY.md  V2_ROADMAP.md
extension/: README.md  background.js  content-script.js  manifest.json  options.css  options.html  options.js  overlay.css  site-detect.js
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: add_elo_columns.py  add_keyn_columns.py  add_song_ignored_column.py  auto_switch.py  backfill_spotify_data.py  create_battle_votes_table.py  migrate_add_spotify_data.py  migrate_keyn.py  migrate_song_requests_metadata.py
tests/: test_api_v1_contracts.py  test_config.py  test_keyn_auth_migration.py  test_seo_routes.py
(+104 files in other folders)
