[tool.poetry]
name = "vinyl-vote"
version = "0.1.0"
description = "Vinyl Vote album voting platform"
authors = ["Vinyl Vote Contributors"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.5"
aiosignal = "1.4.0"
apscheduler = "3.11.0"
attrs = "25.3.0"
better-profanity = "0.7.0"
blinker = "1.9.0"
certifi = "2025.1.31"
cffi = "2.0.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
cryptography = "46.0.7"
email-validator = "2.3.0"
flask = "3.1.0"
flask-login = "0.6.3"
flask-mail = "0.10.0"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.2"
frozenlist = "1.6.0"
greenlet = "3.2.1"
http-ece = "1.2.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
multidict = "6.4.3"
pillow = "12.2.0"
propcache = "0.3.1"
py-vapid = "1.9.2"
pycparser = "2.22"
python-dotenv = "1.1.0"
pytz = "2025.2"
pywebpush = "2.0.3"
redis = "5.2.1"
requests = "2.33.0"
six = "1.17.0"
spotipy = "2.25.2"
sqlalchemy = "2.0.40"
typing-extensions = "4.13.2"
tzlocal = "5.3.1"
urllib3 = "2.6.3"
werkzeug = "3.1.6"
wtforms = "3.2.1"
yarl = "1.20.0"
ytmusicapi = "1.11.5"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
isort = "6.0.1"
pre-commit = "4.2.0"
pytest = "9.0.3"
pytest-cov = "6.1.1"
ruff = "0.11.6"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
